[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyproject2setuppy"
author = "Michał Górny"
author-email = "mgorny@gentoo.org"
home-page = "https://github.com/mgorny/pyproject2setuppy"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Installation/Setup",
]
requires = ["setuptools", "toml"]
